--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -59,6 +59,7 @@
             </ion-item>
             <ion-item
               *ngIf="loggedIn && showSettings"
+              (click)="isSettingMenuVisible = !isSettingMenuVisible"
               routerLink="/settings"
               lines="none"
               routerLinkActive="active"
@@ -66,6 +67,27 @@
               <ion-icon slot="start" name="settings"></ion-icon>
               <ion-label>Settings</ion-label>
             </ion-item>
+            <ion-list *ngIf="isSettingMenuVisible">
+              <ion-item
+                *ngIf="loggedIn && showSettings"
+                routerLink="/settings/item-price"
+                lines="none"
+                routerLinkActive="active"
+              >
+                <ion-icon slot="start" name="wallet-outline"></ion-icon>
+
+                <ion-label> Item Price</ion-label>
+              </ion-item>
+              <ion-item
+                *ngIf="loggedIn && showSettings"
+                routerLink="/settings/credit-limit"
+                lines="none"
+                routerLinkActive="active"
+              >
+                <ion-icon slot="start" name="albums-outline"></ion-icon>
+                <ion-label>Credit Limit</ion-label>
+              </ion-item>
+            </ion-list>
             <ion-item
               routerDirection="'root'"
               routerLink="/"
